Revise portfolio content and author name
Updated project descriptions and added images.

--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
 </head>
 <body>
   <div id="header">
-    <h1>Nama Anda</h1>
+    <h1>Ahmad Tikhan Asyhadi</h1>
     <nav>
       <a href="#">Home</a>
       <a href="#">About</a>
@@ -22,31 +22,32 @@
 
   <section class="projects-grid">
     <div class="project-item">
-      <img src="https://via.placeholder.com/300x180" alt="Project 1" />
+      <img src="pistol.jpeg" alt="Project 1" widht="300" height="250" />
       <h3>Project Satu</h3>
-      <p>Deskripsi singkat tentang proyek pertama.</p>
+      <p>Saya belajar membuat 3d blender seperti pistol dan ice cream.</p>
     </div>
 
     <div class="project-item">
-      <img src="https://via.placeholder.com/300x180" alt="Project 2" />
+      <img src="ai.jpeg" alt="Project 2" widht="300" height="250" />
       <h3>Project Dua</h3>
-      <p>Deskripsi singkat tentang proyek kedua.</p>
+      <p>Saya mempelajari AI untuk kepentingan Tugas dan proyek.</p>
     </div>
 
     <div class="project-item">
-      <img src="https://via.placeholder.com/300x180" alt="Project 3" />
+      <img src="web.jpeg" alt="Project 3" widht="300" height="250" />
       <h3>Project Tiga</h3>
-      <p>Deskripsi singkat tentang proyek ketiga.</p>
+      <p>Saya mempelajari membuat web dengan html, Javascript, dan css.</p>
     </div>
 
     <div class="project-item">
-      <img src="https://via.placeholder.com/300x180" alt="Project 4" />
+      <img src="excel.jpeg" alt="Project 4" widht="300" height="250" />
       <h3>Project Empat</h3>
-      <p>Deskripsi singkat tentang proyek keempat.</p>
+      <p>Saya mengasah skill excel.</p>
     </div>
   </section>
 
   <footer id="main-footer">
-    <p>&copy; 2025 Nama Anda. All rights reserved.</p>
+    <p>&copy; 2025 Ahmad Tikhan Asyhadi. All rights reserved.</p>
   </footer>
 </body>
+
