--- a/produk.html
+++ b/produk.html
@@ -11,21 +11,22 @@
       Smartphone generasi terbaru dengan performa cepat dan kamera berkualitas
       tinggi.
     </p>
-    <img src="https://via.placeholder.com/300x200" alt="Smartphone X" />
+    <img src="phone.jpeg alt="Smartphone X widht="300" height="250" />
     <button>Beli Sekarang</button>
   </div>
 
   <div class="product-card">
     <h2>Laptop Pro</h2>
     <p>Laptop ringan dan bertenaga, cocok untuk bekerja maupun hiburan.</p>
-    <img src="https://via.placeholder.com/300x200" alt="Laptop Pro" />
+    <img src="laptop.jpeg" alt="Laptop Pro" widht="300" height="250 />
     <button>Beli Sekarang</button>
   </div>
 
   <div class="product-card">
     <h2>Smartwatch Lite</h2>
     <p>Jam tangan pintar dengan fitur kesehatan dan baterai tahan lama.</p>
-    <img src="https://via.placeholder.com/300x200" alt="Smartwatch Lite" />
+    <img src="watch.jpeg" alt="Smartwatch Lite widht="300" height="250" />
     <button>Beli Sekarang</button>
   </div>
 </body>
+
