Fix HTML structure and correct image attributes

--- a/produk.html
+++ b/produk.html
@@ -11,7 +11,7 @@
       Smartphone generasi terbaru dengan performa cepat dan kamera berkualitas
       tinggi.
     </p>
-    <img src="phone.jpeg" alt="Smartphone X widht="300" height="250" />
+    <img src="phone.jpeg" alt="Smartphone X" widht="300" height="250" />
     <button>Beli Sekarang</button>
   </div>
 
@@ -29,5 +29,6 @@
     <button>Beli Sekarang</button>
   </div>
 </body>
+
 
 
