--- a/my_page.html
+++ b/my_page.html
@@ -6,9 +6,10 @@
   <h1>Selamat Datang di Portofolio Saya</h1>
 
   <p>
-    Ini adalah paragraf pertama yang berisi teks bebas untuk contoh halaman.
+    Halo Saya Ahmad Tikhan Asyhadi, dari sekolah SMKN 1 Nganjuk, Jurusan pengembangan Gim.
   </p>
-  <p>Ini adalah paragraf kedua sebagai tambahan konten sederhana.</p>
+  <p>Saya akan menunjukkan beberapa hasil kerja saya.</p>
 
   <button>Pelajari Lebih Lanjut</button>
 </body>
+
